--- a/SECB/app/src/main/res/layout/reset_password.xml
+++ b/SECB/app/src/main/res/layout/reset_password.xml
@@ -2,50 +2,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/login_page_horizontal_pad"
-    android:paddingRight="@dimen/login_page_horizontal_pad"
-    >
+    android:paddingRight="@dimen/login_page_horizontal_pad">
 
-<!--logo-->
-    <ImageView
-        android:layout_width="294px"
-        android:layout_height="215px"
-        android:src="@drawable/login_logo"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/login_logo_margin_top"
-        android:layout_marginBottom="@dimen/login_logo_margin_bottom"/>
-
-<!--input fields-->
-    <!-- @dimen/login_input_container_height
-        android:paddingTop="@dimen/forget_pass_input_container_vertical_pad"
-        android:paddingBottom="@dimen/forget_pass_input_container_vertical_pad"-->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/login_container_width"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/login_input_container_pad_left"
-        android:paddingRight="@dimen/login_input_container_pad_right"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="-125dp">
 
-        <!-- email-->
-        <include layout="@layout/email_input"/>
+        <!--logo-->
+        <ImageView
+            android:layout_width="@dimen/login_logo_img_width"
+            android:layout_height="@dimen/login_logo_img_height"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/forget_pass_logo_margin_bottom"
+            android:scaleType="centerCrop"
+            android:src="@drawable/login_logo"
+            android:visibility="visible" />
 
+
+        <!--input fields-->
+        <!-- @dimen/login_input_container_height
+            android:paddingTop="@dimen/forget_pass_input_container_vertical_pad"
+            android:paddingBottom="@dimen/forget_pass_input_container_vertical_pad"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/login_input_container_pad_left"
+            android:paddingRight="@dimen/login_input_container_pad_right">
+
+            <!-- email-->
+            <include layout="@layout/email_input" />
+
+
+        </LinearLayout>
+
+        <!--login button-->
+        <Button
+            android:id="@+id/btn_resetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_button_height"
+            android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
+            android:background="@color/secb_orange"
+            android:text="@string/resetPassword"
+            android:textColor="@color/secb_dark_text"
+            android:textSize="@dimen/login_button_text_size" />
 
     </LinearLayout>
-
-<!--login button-->
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/login_button_height"
-        android:text="@string/resetPassword"
-        android:textSize="@dimen/login_button_text_size"
-        android:textColor="@color/secb_dark_text"
-        android:background="@color/secb_orange"
-        android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
-        android:id="@+id/btn_resetPassword" />
-
 </LinearLayout>
