--- a/SECB/app/src/main/res/layout-ar/contact_us.xml
+++ b/SECB/app/src/main/res/layout-ar/contact_us.xml
@@ -128,9 +128,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:visibility="gone"/>
+                android:visibility="visible" />
 
-            <include layout="@layout/map_fragment"/>
+            <!--<include layout="@layout/map_fragment"/>-->
         </LinearLayout>
 
 
@@ -167,6 +167,7 @@
                 android:cursorVisible="true"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/user_shape_icon"
+                android:singleLine="true"
                 android:gravity="right"
                 android:hint="@string/hint_name"
                 android:textColor="@color/secb_dark_text"
@@ -188,6 +189,8 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/mobile_icon"
+                android:inputType="phone"
+                android:singleLine="true"
                 android:gravity="right"
                 android:hint="@string/hint_mobile"
                 android:textColor="@color/secb_dark_text"
@@ -207,6 +210,7 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/organization_icon"
+                android:singleLine="true"
                 android:gravity="right"
                 android:hint="@string/hint_organization"
                 android:textColor="@color/secb_dark_text"
@@ -226,7 +230,9 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/email_icon"
+                android:singleLine="true"
                 android:gravity="right"
+                android:inputType="textEmailAddress"
                 android:hint="@string/email_address"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/contact_us_text_us"/>
@@ -245,6 +251,7 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:drawableRight="@drawable/job_icon"
+                android:singleLine="true"
                 android:gravity="right"
                 android:hint="@string/hint_job_title"
                 android:textColor="@color/secb_dark_text"
@@ -266,6 +273,7 @@
                 android:drawableRight="@drawable/subject_icon"
                 android:gravity="right"
                 android:hint="@string/hint_subject"
+                android:singleLine="true"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/contact_us_text_us"/>
 
