--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="login_logo_img_height">85dp</dimen> <!-- 215PX - HEIGHT -->
 
     <dimen name="forget_pass_input_container_vertical_pad">10dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="forget_pass_logo_margin_bottom">62dp</dimen>
 
     <dimen name="menu_item_icon_horizontal_margin">24dp</dimen> <!-- 55PX - WIDTH -->
     <dimen name="menu_item_vertical_margin">8dp</dimen> <!-- 20PX - HEIGHT -->
@@ -55,7 +56,7 @@
 
     <dimen name="home_news_recycler_height">90dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
-    <dimen name="news_item_card_height">58dp</dimen> <!-- 140PX - HEIGHT -->
+    <dimen name="news_item_card_height">63dp</dimen> <!-- 140PX - HEIGHT -->
     <dimen name="news_filter_screen_height">359dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_screen_recycler_height">107dp</dimen> <!-- 270PX - HEIGHT -->
 
