--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="login_logo_img_height">76dp</dimen> <!-- 215PX - HEIGHT -->
 
     <dimen name="forget_pass_input_container_vertical_pad">8dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="forget_pass_logo_margin_bottom">55dp</dimen>
 
     <dimen name="menu_item_icon_horizontal_margin">24dp</dimen> <!-- 55PX - WIDTH -->
     <dimen name="menu_item_vertical_margin">7dp</dimen> <!-- 20PX - HEIGHT -->
@@ -57,7 +58,7 @@
 
     <dimen name="home_news_recycler_height">90dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">8dp</dimen> <!-- 25PX - HEIGHT -->
-    <dimen name="news_item_card_height">49dp</dimen> <!-- 140PX - HEIGHT -->
+    <dimen name="news_item_card_height">54dp</dimen> <!-- 140PX - HEIGHT -->
     <dimen name="news_filter_screen_height">321dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_screen_recycler_height">95dp</dimen> <!-- 270PX - HEIGHT -->
 
