--- a/SECB/app/src/main/res/layout/header.xml
+++ b/SECB/app/src/main/res/layout/header.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/header_height"
-    android:background="@color/sceb_blue"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="@dimen/header_height"
+              android:background="@color/sceb_blue"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
 
             android:paddingLeft="@dimen/header_menu_icon_margin_start"
             android:paddingRight="@dimen/header_menu_icon_margin_end"
-            android:src="@drawable/header_back_button_en" />
+            android:src="@drawable/header_back_button_en"/>
 
         <TextView
             android:id="@+id/textViewTitleHeader"
@@ -42,7 +42,7 @@
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/header_title_text_size"
             android:textStyle="bold"
-            android:visibility="visible" />
+            android:visibility="visible"/>
 
 
         <ImageView
@@ -56,19 +56,19 @@
             android:paddingRight="@dimen/header_menu_icon_margin_end"
             android:paddingTop="@dimen/header_menu_icon_margin_start"
             android:src="@drawable/header_menu_button"
-            android:visibility="visible" />
-<!--
-        <com.addthis.ui.views.ATButton
-            android:id="@+id/addthisShareButton"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingBottom="@dimen/header_menu_icon_margin_start"
-            android:paddingLeft="@dimen/header_menu_icon_margin_start"
-            android:paddingRight="@dimen/header_menu_icon_margin_end"
-            android:paddingTop="@dimen/header_menu_icon_margin_start"/>
-        -->
+            android:visibility="visible"/>
+        <!--
+                <com.addthis.ui.views.ATButton
+                    android:id="@+id/addthisShareButton"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="@dimen/header_menu_icon_margin_start"
+                    android:paddingLeft="@dimen/header_menu_icon_margin_start"
+                    android:paddingRight="@dimen/header_menu_icon_margin_end"
+                    android:paddingTop="@dimen/header_menu_icon_margin_start"/>
+                -->
         <ImageView
             android:id="@+id/imageViewShareHeader"
             android:layout_width="wrap_content"
@@ -80,7 +80,20 @@
             android:paddingRight="@dimen/header_menu_icon_margin_end"
             android:paddingTop="@dimen/header_menu_icon_margin_start"
             android:src="@drawable/share_icon"
-            android:visibility="visible" />
+            android:visibility="visible"/>
+
+        <ImageView
+            android:id="@+id/imageViewFilterHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="@dimen/header_menu_icon_margin_start"
+            android:paddingLeft="@dimen/header_menu_icon_margin_start"
+            android:paddingRight="@dimen/header_menu_icon_margin_end"
+            android:paddingTop="@dimen/header_menu_icon_margin_start"
+            android:src="@drawable/event_card_filter_icon2"
+            android:visibility="gone"/>
 
 
     </RelativeLayout>
