--- a/SECB/app/src/main/res/layout/main.xml
+++ b/SECB/app/src/main/res/layout/main.xml
@@ -35,6 +35,7 @@
             android:layout_alignRight="@+id/simple_fragment"
             android:layout_marginBottom="@dimen/base_filter_btn_margin"
             android:layout_marginRight="@dimen/base_filter_btn_margin"
+            android:visibility="gone"
             />
         <!--filter screen-->
         <!--android:layout_alignBottom="@+id/simple_fragment" -->
