--- a/SECB/app/src/main/res/layout/gallery_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/gallery_list_fragment.xml
@@ -4,11 +4,11 @@
     android:paddingBottom="@dimen/home_graphs_card_padding"
     android:paddingLeft="@dimen/home_graphs_card_padding"
     android:paddingRight="@dimen/home_graphs_card_padding"-->
+    <!--android:background="@drawable/home_bg"-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/home_bg">
+    android:orientation="vertical">
 
 
    <!-- android:layout_marginBottom="@dimen/home_graphs_card_padding"
