--- a/SECB/app/src/main/res/layout-ar/organizer_personal_info.xml
+++ b/SECB/app/src/main/res/layout-ar/organizer_personal_info.xml
@@ -36,7 +36,7 @@
             android:gravity="center_vertical"
             android:text="-"
             android:paddingRight="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
 
@@ -72,7 +72,7 @@
             android:gravity="center_vertical"
             android:text="-"
             android:paddingRight="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
 
@@ -108,7 +108,7 @@
             android:gravity="center_vertical"
             android:text=""
             android:paddingRight="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
 
@@ -144,7 +144,7 @@
             android:gravity="center_vertical"
             android:paddingRight="3dp"
             android:text="-"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
 
