--- a/SECB/app/src/main/res/layout/organizer_personal_info.xml
+++ b/SECB/app/src/main/res/layout/organizer_personal_info.xml
@@ -33,7 +33,7 @@
             android:gravity="center_vertical"
             android:text="-"
             android:paddingLeft="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </TableRow>
 
@@ -66,7 +66,7 @@
             android:gravity="center_vertical"
             android:text="-"
             android:paddingLeft="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </TableRow>
 
@@ -98,7 +98,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="-"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:paddingLeft="3dp"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </TableRow>
@@ -132,7 +132,7 @@
             android:gravity="center_vertical"
             android:text="-"
             android:paddingLeft="3dp"
-            android:textColor="@color/secb_grey_text"
+            android:textColor="@color/secb_light_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </TableRow>
 
