Handle the menu navigation

--- a/SECB/app/src/main/res/layout/contact_us.xml
+++ b/SECB/app/src/main/res/layout/contact_us.xml
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:background="@drawable/home_bg"
         android:orientation="vertical"
-        android:padding="@dimen/contact_us_padding">
+        android:padding="@dimen/contact_us_padding"
+        android:focusableInTouchMode="true">
 
         <TextView
             android:id="@+id/txtv_location"
