--- a/SECB/app/src/main/res/layout-ar/menu_layout.xml
+++ b/SECB/app/src/main/res/layout-ar/menu_layout.xml
@@ -1,18 +1,31 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/menu_bg"
-                android:paddingTop="@dimen/menu_item_vertical_margin">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/menu_bg"
+    android:orientation="vertical"
+    android:paddingTop="@dimen/header_menu_icon_margin_start">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/menuItemRecyclerView"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/menu_item_vertical_margin"
-        android:layout_marginTop="@dimen/menu_item_vertical_margin">
+        android:gravity="center_vertical">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/menuItemRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/menu_item_vertical_margin"
+            android:layout_marginTop="@dimen/menu_item_vertical_margin">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
-    </android.support.v7.widget.RecyclerView>
-
-</RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+</LinearLayout>
