--- a/SECB/app/src/main/res/layout-sw720dp/contact_us.xml
+++ b/SECB/app/src/main/res/layout-sw720dp/contact_us.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:layout_marginRight="@dimen/page_layouts_margin_h"
         android:orientation="vertical"
-        >
+        android:focusableInTouchMode="true">
 
         <LinearLayout
             android:layout_width="match_parent"
