--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -119,6 +119,7 @@
     <!--<dimen name="eservice_item_padding">15dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
 
     <dimen name="eservice_item_padding">6dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="eservice_item_margin_btm">6dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">14dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">15dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">100dp</dimen>
@@ -140,5 +141,7 @@
     <dimen name="about_us_text_margin">7dp</dimen> <!-- 13PX - HEIGHT -->
 
     <dimen name="organizer_p_info_rows_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
-    <dimen name="organizer_details_margin_small">6dp</dimen> <!-- 10PX - HEIGHT -->
+    <dimen name="organizer_details_margin_small">6dp</dimen>
+    <dimen name="eservice_item_margin_tablet">0dp</dimen>
+    <!-- 10PX - HEIGHT -->
 </resources>
