--- a/SECB/app/src/main/res/layout/e_service_item_card.xml
+++ b/SECB/app/src/main/res/layout/e_service_item_card.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/eservice_item_padding">
+    android:layout_marginBottom="@dimen/eservice_item_margin_btm"
+    android:layout_marginTop="@dimen/eservice_item_margin_tablet"
+    android:layout_marginRight="@dimen/eservice_item_margin_tablet">
 
     <ImageView
         android:layout_width="match_parent"
