--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -122,6 +122,7 @@
     <!--<dimen name="eservice_item_padding">11dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
 
     <dimen name="eservice_item_padding">4dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="eservice_item_margin_btm">4dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">70dp</dimen>
@@ -144,7 +145,9 @@
     <dimen name="about_us_text_margin">5dp</dimen> <!-- 13PX - HEIGHT -->
 
     <dimen name="organizer_p_info_rows_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
-    <dimen name="organizer_details_margin_small">5dp</dimen> <!-- 10PX - HEIGHT -->
+    <dimen name="organizer_details_margin_small">5dp</dimen>
+    <dimen name="eservice_item_margin_tablet">0dp</dimen>
+    <!-- 10PX - HEIGHT -->
 
 
 </resources>
