--- a/SECB/app/src/main/res/values-sw720dp/dimens.xml
+++ b/SECB/app/src/main/res/values-sw720dp/dimens.xml
@@ -19,5 +19,10 @@
     <dimen name="aboutUsImg_width">485dp</dimen>
     <dimen name="contact_us_left_side_width">666dp</dimen>
     <dimen name="contact_us_right_side_width">535dp</dimen>
-
+    <dimen name="eservice_item_padding">20dp</dimen>
+    <dimen name="eservice_item_margin_btm">0dp</dimen>
+    <dimen name="eservice_item_margin_tablet">15dp</dimen>
+    <dimen name="eservice_colored_line_width">8dp</dimen>
+    <dimen name="filter_width_tablet">590dp</dimen>
+    <dimen name="menu_width">375dp</dimen> <!-- 500PX - WIDTH -->
 </resources>
