--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -122,6 +122,7 @@
     <!--<dimen name="eservice_item_padding">14dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
 
     <dimen name="eservice_item_padding">5dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="eservice_item_margin_btm">5dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">13dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">14dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">90dp</dimen>
